--- a/Frontend/src/pages/login/sign_in.html
+++ b/Frontend/src/pages/login/sign_in.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-<link rel="stylesheet" href="../../src/pages/css/style.css">
+<link rel="stylesheet" href="sign_in_style.css">
 <body>
     <div class="login-container">
         <h2>Login</h2>
