--- a/Frontend/src/pages/login/sign_up.html
+++ b/Frontend/src/pages/login/sign_up.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrierung</title>
-   <link rel="stylesheet" href="../../src/pages/css/style.css">
+   <link rel="stylesheet" href="sign_up_style.css">
 </head>
 <body>
     <div class="sign_up-container">
