--- a/Frontend/src/pages/login/sign_up.html
+++ b/Frontend/src/pages/login/sign_up.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrierung</title>
-   <link rel="stylesheet" href="sign_up_style.css">
+    <link rel="stylesheet" href="sign_up_style.css">
 </head>
 <body>
     <div class="sign_up-container">
@@ -58,6 +58,6 @@
         <p>Haben Sie bereits ein Konto? <a href="sign_in.html">Sign In</a></p>
     </div>
 
-    <script src="../../src/pages/javascript/register.js"></script>
+    <script src="../../javascript/register.js"></script>
 </body>
 </html>
