--- a/Frontend/src/pages/login/sign_in.html
+++ b/Frontend/src/pages/login/sign_in.html
@@ -17,6 +17,6 @@
         <p>Noch kein Konto? <a href="sign_up.html">Registrieren</a></p>
     </div>
 
-    <script src="auth.js"></script>
+    <script src="../../javascript/login.js"></script>
 </body>
 </html>
