--- a/Frontend/src/pages/dashboard/main.html
+++ b/Frontend/src/pages/dashboard/main.html
@@ -34,27 +34,14 @@
         <!-- Add New Project Section -->
         <section class="add-project">
             <h2>Add New Project</h2>
-            <form id="newProjectForm">
-                <label for="projectName">Project Name:</label>
-                <input type="text" id="projectName" name="projectName" required>
-
-                <label for="projectDescription">Description:</label>
-                <textarea id="projectDescription" name="projectDescription" required></textarea>
-
-                <label for="projectStatus">Status:</label>
-                <select id="projectStatus" name="projectStatus">
-                    <option value="open">Open</option>
-                    <option value="closed">Closed</option>
-                </select>
-
-                <button type="submit">Create Project</button>
-            </form>
+            <!-- New button to link to new_projekt.html -->
+            <button onclick="href='../newProject/new_project.html'">Create New Project</button>
         </section>
 
         <div id="message"></div>
 
-        <!-- JavaScript to handle the project overview and new project creation -->
-
+        <!-- JavaScript to handle the project overview -->
+        <script src="../../javascript/main.js"></script>
     </div>
 </body>
 </html>
